# fastcraft

./: .gitignore  README.md  pyproject.toml
.github/workflows/: linting and formatting.yml
fastcraft/: README.md  main.py
fastcraft/cli/: create_dir.py  main.py
fastcraft/fastcraft/cli/: create_dir.py  main.py
fastcraft/fastcraft/utils/: choices.py  file_writes.py  generate_file_struct.py  package_manager.py
fastcraft/utils/: choices.py  file_writes.py  generate_file_struct.py  package_manager.py
myneww/app/: main.py
