[tool.poetry]
name = "fastcraft"
version = "0.0.1"
description = ""
authors = ["Minty-cyber"]
readme = "README.md"

[tool.poetry.scripts]
fastcraft = "fastcraft.main:app"

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.15.1"
pathlib = "^1.0.1"
rich = "^13.9.4"
inquirerpy = "^0.3.4"



[tool.poetry.group.dev.dependencies]
ruff = "^0.8.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
